# btc-zk

bitcoin/: Cargo.toml
bitcoin/src/: block_data.rs  lib.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
