[package]
version = "0.1.0"
name = "bitcoin"
edition = "2021"

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0.61"
hex = { version = "0.4.3", features = ["serde"] }
