[workspace]
[package]
version = "0.1.0"
name = "btc-lite-program"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.2"
sha2 = "0.10.8"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.7-testnet" }


[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }